# pdf-to-excel-table-transfer

./: Dockerfile  Main.py  README.md  data.xlsx  pyproject.toml  requirements.txt
data/: Data1.xlsx  Data2.xlsx  Data3.xlsx  Data4.xlsx
